--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-PORT=4201
-DB_CNN="mongodb+srv://david:MYZLTfbPbTZ5h1xd@davidvargas.zruhf.mongodb.net/test?authSource=admin&replicaSet=atlas-vn53nj-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true"
+PORT=
+DB_CNN=""
